force-app/main/default/objects/Bus_Hold_Request__c/Bus_Hold_Request__c.object-meta.xml
<CustomObject>
    <label>Bus Hold Request</label>
    <nameField>
        <displayFormat>Hold - {00000}</displayFormat>
        <label>Bus Hold Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Hold Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>