force-app/main/default/objects/Bus_Hold_Request__c/fields/Address_for_Demo__c.field-meta.xml
<CustomField>
    <fullName>Address_for_Demo__c</fullName>
    <label>Address for Demo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>