force-app/main/default/objects/Bus_Hold_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the appropriate individual to review your test request details</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bus_Hold_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>