force-app/main/default/objects/Bus_Hold_Request__c/fields/Bus_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Bus_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus Assigned</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Bus Hold Requests (Bus Assigned)</relationshipLabel>
    <relationshipName>Bus_Hold_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>