force-app/main/default/objects/Bus_Hold_Request__c/fields/Bus_Requested__c.field-meta.xml
<CustomField>
    <fullName>Bus_Requested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus Requested</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Bus Hold Requests</relationshipLabel>
    <relationshipName>Bus_Hold_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>