force-app/main/default/objects/Bus_Hold_Request__c/fields/Bus_Required__c.field-meta.xml
<CustomField>
    <fullName>Bus_Required__c</fullName>
    <label>Bus Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specific Bus/Customer</fullName>
            </value>
            <value>
                <fullName>Specific Configuration</fullName>
            </value>
            <value>
                <fullName>Any Bus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>