force-app/main/default/objects/Bus_Hold_Request__c/fields/Configuration_s_Required__c.field-meta.xml
<CustomField>
    <fullName>Configuration_s_Required__c</fullName>
    <inlineHelpText>Select all configurations which will meet your requriement</inlineHelpText>
    <label>Configuration(s) Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>29&apos; Diesel</fullName>
            </value>
            <value>
                <fullName>29&apos; Allison Hybrid</fullName>
            </value>
            <value>
                <fullName>29&apos; CNG</fullName>
            </value>
            <value>
                <fullName>35&apos; Diesel</fullName>
            </value>
            <value>
                <fullName>35&apos; Allison Hybrid</fullName>
            </value>
            <value>
                <fullName>35&apos; BAE Hybrid</fullName>
            </value>
            <value>
                <fullName>35&apos; CNG</fullName>
            </value>
            <value>
                <fullName>40&apos; Diesel</fullName>
            </value>
            <value>
                <fullName>40&apos; Allison Hybrid</fullName>
            </value>
            <value>
                <fullName>40&apos; BAE Hybrid</fullName>
            </value>
            <value>
                <fullName>40&apos; CNG</fullName>
            </value>
            <value>
                <fullName>40&apos; Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>