force-app/main/default/objects/Bus_Hold_Request__c/fields/Customer_Approval_From__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the contact at the customer who approved use of the bus and provide details in Chatter</inlineHelpText>
    <label>Customer Approval From</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bus Hold Requests</relationshipLabel>
    <relationshipName>Bus_Hold_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>