force-app/main/default/objects/Bus_Hold_Request__c/fields/Date_Bus_Must_Leave__c.field-meta.xml
<CustomField>
    <fullName>Date_Bus_Must_Leave__c</fullName>
    <label>Date Bus Must Leave</label>
    <type>Date</type>
</CustomField>