force-app/main/default/objects/Bus_Hold_Request__c/fields/Demo_Contact__c.field-meta.xml
<CustomField>
    <fullName>Demo_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bus Hold Requests (Demo Contact)</relationshipLabel>
    <relationshipName>Bus_Hold_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>