force-app/main/default/objects/Bus_Hold_Request__c/fields/Demo_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Demo_Contact_Phone__c</fullName>
    <formula>Demo_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo Contact - Phone</label>
    <type>Text</type>
</CustomField>