force-app/main/default/objects/Bus_Hold_Request__c/fields/Demo_Customer__c.field-meta.xml
<CustomField>
    <fullName>Demo_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Customer for who the Demo is being performed. If a conference, list in the address details.</inlineHelpText>
    <label>Demo Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demos</relationshipLabel>
    <relationshipName>Bus_Hold_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>