force-app/main/default/objects/Bus_Hold_Request__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <formula>Bus_Assigned__r.Delivery_Driver__r.FirstName &amp;&quot; &quot;&amp; Bus_Assigned__r.Delivery_Driver__r.LastName</formula>
    <label>Driver</label>
    <type>Text</type>
</CustomField>