force-app/main/default/objects/Bus_Hold_Request__c/fields/Driver_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Driver_Instructions__c</fullName>
    <label>Driver Instructions</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>