force-app/main/default/objects/Bus_Hold_Request__c/fields/Driver_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Mobile_Number__c</fullName>
    <formula>Bus_Assigned__r.Delivery_Driver__r.MobilePhone</formula>
    <label>Driver Mobile Number</label>
    <type>Text</type>
</CustomField>