force-app/main/default/objects/Bus_Hold_Request__c/fields/Duration_of_Test__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Test__c</fullName>
    <label>Duration of Test/Demo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>