force-app/main/default/objects/Bus_Hold_Request__c/fields/Gillig_Contact_at_Demo__c.field-meta.xml
<CustomField>
    <fullName>Gillig_Contact_at_Demo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gillig Contact at Demo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bus_Hold_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>