force-app/main/default/objects/Bus_Hold_Request__c/fields/Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Name__c</fullName>
    <formula>Bus_Assigned__r.Sales_Order__r.Account__r.Internal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Name</label>
    <type>Text</type>
</CustomField>