force-app/main/default/objects/Bus_Hold_Request__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <formula>Bus_Assigned__r.Bus_Length__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length</label>
    <type>Text</type>
</CustomField>