force-app/main/default/objects/Bus_Hold_Request__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <formula>Bus_Assigned__r.Mode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mode</label>
    <type>Text</type>
</CustomField>