force-app/main/default/objects/Bus_Hold_Request__c/fields/Notes_for_Field_Service__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Field_Service__c</fullName>
    <label>Notes for Field Service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>