force-app/main/default/objects/Bus_Hold_Request__c/fields/Notes_for_Production__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Production__c</fullName>
    <label>Notes for Production</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>