force-app/main/default/objects/Bus_Hold_Request__c/fields/Notes_for_Supply_Chain__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Supply_Chain__c</fullName>
    <label>Notes for Supply Chain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>