force-app/main/default/objects/Bus_Hold_Request__c/fields/Other_Specific_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Other_Specific_Requirements__c</fullName>
    <label>Other Specific Requirements</label>
    <type>TextArea</type>
</CustomField>