force-app/main/default/objects/Bus_Hold_Request__c/fields/Project_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Sales_Manager__c</fullName>
    <formula>Bus_Assigned__r.Current_Owner__r.Project_Sales_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Sales Manager</label>
    <type>Text</type>
</CustomField>