force-app/main/default/objects/Bus_Hold_Request__c/fields/Purpose_of_Test__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Test__c</fullName>
    <label>Purpose of Test</label>
    <type>TextArea</type>
</CustomField>