force-app/main/default/objects/Bus_Hold_Request__c/fields/Scheduled_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Completion_Date__c</fullName>
    <label>Scheduled Completion Date</label>
    <type>Date</type>
</CustomField>