force-app/main/default/objects/Bus_Hold_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Once the fields are populated, change the status to the next step to move the process along.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Draft</fullName>
                <default>true</default>
                <label>1. Draft</label>
            </value>
            <value>
                <fullName>2. Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>3. Awaiting Bus Assignment</fullName>
            </value>
            <value>
                <fullName>4. Submitted</fullName>
            </value>
            <value>
                <fullName>5. Held by Engineering</fullName>
            </value>
            <value>
                <fullName>5. On Demo</fullName>
            </value>
            <value>
                <fullName>6. Hold Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>