force-app/main/default/objects/Bus_Hold_Request__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <formula>Bus_Assigned__r.Style__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Style</label>
    <type>Text</type>
</CustomField>