force-app/main/default/objects/Bus_Hold_Request__c/fields/Testing_Description__c.field-meta.xml
<CustomField>
    <fullName>Testing_Description__c</fullName>
    <label>Testing Description</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>