force-app/main/default/objects/Bus_Hold_Request__c/recordTypes/Demo_Request.recordType-meta.xml
<RecordType>
    <fullName>Demo_Request</fullName>
    <active>true</active>
    <description>Request for a Bus Demo</description>
    <label>Demo Request</label>
</RecordType>