force-app/main/default/objects/Bus_Hold_Request__c/recordTypes/Engineering_Test.recordType-meta.xml
<RecordType>
    <fullName>Engineering_Test</fullName>
    <active>true</active>
    <description>Testing Requested by Engineering</description>
    <label>Engineering Test</label>
</RecordType>