force-app/main/default/objects/Bus_Hold_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Internal_Name__c</columns>
    <columns>Bus_Assigned__c</columns>
    <columns>Testing_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>