force-app/main/default/objects/Bus_Hold_Request__c/listViews/Upcoming_Engineering_Testing.listView-meta.xml
<ListView>
    <fullName>Upcoming_Engineering_Testing</fullName>
    <columns>NAME</columns>
    <columns>Bus_Assigned__c</columns>
    <columns>Internal_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Scheduled_Completion_Date__c</columns>
    <columns>Purpose_of_Test__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Bus_Hold_Request__c.Engineering_Test</value>
    </filters>
    <filters>
        <field>Scheduled_Completion_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Engineering Testing</label>
</ListView>